Added plplot for visualization of tuning data.

--- a/calibration/ui/Makefile
+++ b/calibration/ui/Makefile
@@ -4,10 +4,11 @@ CPPFLAGS=-c -Wall
 SOURCES=main.cpp pic_serial.cpp load_cell.cpp utils.cpp stopwatch.cpp
 LFLAGS=-lpthread
 LINKDIR=-Lusr/lib/x86_64-linux-gnu
+PKGS=`pkg-config --cflags --libs plplot-c++`
 OBJECTS=$(SOURCES:.cpp=.o)
 
 $(PROG): $(OBJECTS)
-	$(CC) -o $(PROG) $(OBJECTS) $(LFLAGS) $(LINKDIR)
+	$(CC) -o $(PROG) $(OBJECTS) $(LFLAGS) $(LINKDIR) $(PKGS)
 
 %.o: %.cpp
 	$(CC) $(CPPFLAGS) -o $@ $<
