--- a/calibration/ui/Makefile
+++ b/calibration/ui/Makefile
@@ -1,7 +1,7 @@
 PROG=biotac_cal
 CC=g++
 CPPFLAGS=-c -Wall
-SOURCES=main.cpp pic_serial.cpp load_cell.cpp utils.cpp stopwatch.cpp keyboard_thread.cpp
+SOURCES=main.cpp pic_serial.cpp load_cell.cpp utils.cpp stopwatch.cpp keyboard_thread.cpp biotac.cpp
 LFLAGS=-lpthread
 LINKDIR=-Lusr/lib/x86_64-linux-gnu
 PKGS=`pkg-config --cflags --libs plplot-c++`
