--- a/calibration/ui/Makefile
+++ b/calibration/ui/Makefile
@@ -2,7 +2,7 @@ PROG=biotac_cal
 CC=g++
 CPPFLAGS=-c -Wall
 SOURCES=main.cpp pic_serial.cpp load_cell.cpp utils.cpp stopwatch.cpp keyboard_thread.cpp biotac.cpp
-SOURCES+=real_time_plot.cpp
+SOURCES+=real_time_plot.cpp data_logger.cpp
 LFLAGS=-lpthread
 LINKDIR=-Lusr/lib/x86_64-linux-gnu
 PKGS=`pkg-config --cflags --libs plplot-c++`
