Fixed a problem in the Makefile that caused it to constantly rebuild the entire project even if only one file changed.

--- a/calibration/ui/Makefile
+++ b/calibration/ui/Makefile
@@ -10,13 +10,14 @@ PKGS=`pkg-config --cflags --libs plplot-c++` `pkg-config --cflags --libs fann`
 OBJECTS=$(SOURCES:.cpp=.o)
 OBJDIR=obj
 BUILDOBJECTS=$(patsubst %,$(OBJDIR)/%,$(OBJECTS))
+HDRS := $(wildcard *.h)
 
 
-$(PROG): $(OBJECTS)
+$(PROG): $(BUILDOBJECTS)
 	$(CC) -o $(PROG) $(BUILDOBJECTS) $(LFLAGS) $(LINKDIR) $(PKGS)
 
-%.o: %.cpp
-	$(CC) $(CPPFLAGS) -o $(OBJDIR)/$@ $<
+obj/%.o: %.cpp $(HDRS)
+	$(CC) $(CPPFLAGS) -o $@ $<
 
 .PHONY: clean
 clean:
